--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -20,7 +20,7 @@
           <div class="participants__name">
             <div class="label_detail text-color" *ngIf="changeTypeSign">
               <div>
-                <input type="radio"  (change)="changeTypeSign(0)" name="checkPhoneMailOrgSigner_" value="{{this.login_by}}"/>
+                <input type="radio"  (change)="changeTypeSign(0)" name="checkPhoneMailOrgSigner_" value="{{this.login_by}}" checked/>
               </div>&nbsp;
               <div>
                 {{'typeOfSignEmail' | translate}}
@@ -47,7 +47,7 @@
               <img src="assets/img/icon_name.svg" class="input-img">
 
               <!--Trường hợp typeOfSignEmail-->
-              <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"  value="{{this.name}}">
+              <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"  [(ngModel)]="name">
 
                 <!--Trường hợp typeOfSignPhone-->
               <!-- <input  type="text" placeholder="{{'nhap_ho_va_ten' | translate}}"value="{{this.name}}"/> -->
@@ -59,30 +59,10 @@
             <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span></div>
             
               <div class="input-data">
-                <input type="text" placeholder="{{'nhap_email' | translate}}" value="{{this.sign_type}}" readonly>
+                <input type="text" placeholder="{{'nhap_email' | translate}}" value="{{sign_type}}" readonly>
               </div>
               
             </div>
-
-            <!--Tổ chức của tôi chọn loại ký-->
-            <!-- <ng-multiselect-dropdown 
-              
-              placeholder="{{'choose' | translate }}"
-              [settings]="dropdownSignTypeSettings" 
-              [data]="isListSignNotPerson" 
-              (onSelect)="onItemSelect($event, data_organization.name)"
-              (onDeSelect)="deSelectOrg($event)"
-              
-            >
-              <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
-                <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
-                  <label style="color: #333; font-weight: normal;"
-                    [ngStyle]="{ 'font-weight': isSelected? 'bold':' normal','color': getContractConnectItems[id].isDisabled? 'lightgrey': ''}">
-                    {{getContractConnectItems[id].name}} value="{{this.sign_type}}"
-                  </label>
-                </div>
-              </ng-template>
-            </ng-multiselect-dropdown> -->
           </div>
         </div>
 
@@ -92,7 +72,7 @@
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" value="{{this.email}}">
+              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email"/>
             </div>
           </div>
 
@@ -100,7 +80,7 @@
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" />
             </div>
           </div>
         </div>
@@ -129,7 +109,7 @@
           <div class="participants__name" style="width: 91%">
             <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
             <div class="input-data">
-              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" value="{{this.card_id}}" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+              <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
           </div>
         </div>
@@ -139,7 +119,27 @@
           <div class="participants__name" style="width: 91%">
             <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
-              <input type="text" placeholder="{{'enter.tax.code' | translate}}" value="{{this.card_id}}" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+              <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+            </div>
+          </div>
+        </div>
+
+         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là ảnh và otp-->
+        <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 1 && isCheckRadio">
+          <div class="participants__name" style="width: 91%">
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+            <div class="input-data">
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+            </div>
+          </div>
+        </div>
+
+        <!--trường hiển thị khi đối tác là cá nhân chọn loại ký là eKYC-->
+        <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 5">
+          <div class="participants__name" style="width: 91%">
+            <div class="label_detail text-color">{{'cardId' | translate}}&nbsp;<span class="required-title">*</span></div>
+            <div class="input-data">
+              <input type="text" placeholder="{{'enter.cardId' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
           </div>
         </div>
