--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -61,14 +61,14 @@
                     <div class="row sign-unit-select">
                         <div class="col-md-9">
                             <label class="label-require">Font</label>
-                            <select class="form-select" id="select-dropdown" aria-label="Default select example" [ngModel]="this.selectedFont" (ngModelChange)="changeFont($event)">
+                            <select (change)="changePositionSign($event, null, 'font')" class="form-select" id="select-dropdown" aria-label="Default select example" [(ngModel)]="this.objSignInfo.font">
                                 <option value="" hidden>{{'choose.font' | translate}}</option>
                                 <option *ngFor="let d of this.list_font, let i = index" [selected]="d.selected" value="{{d}}">{{d}}</option>
                             </select>
                         </div>
                         <div class="col-md-3">
                             <label class="label-require">Size</label>
-                            <input class="form-control" [(ngModel)]="size"/>
+                            <input class="form-control" [(ngModel)]="this.objSignInfo.size"/>
                         </div>
                     </div>
 
