--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -68,7 +68,8 @@
                         </div>
                         <div class="col-md-3">
                             <label class="label-require">Size</label>
-                            <input class="form-control" [(ngModel)]="this.objSignInfo.size"/>
+                            <input *ngIf="this.textSign" class="form-control" [(ngModel)]="this.objSignInfo.font_size" (change)="changePositionSign($event, null, 'font_size')"/>
+                            <input *ngIf="!this.textSign" class="form-control" [(ngModel)]="this.objSignInfo.font_size" (change)="changePositionSign($event, null, 'font_size')" readonly/>
                         </div>
                     </div>
 
