--- a/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
+++ b/src/app/main/contract-template/shared/model/preview-contract-template/preview-sign-contract-template/preview-sign-contract-template.component.html
@@ -24,7 +24,7 @@
   class="text-sign"
   *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'"
 >
-  <span [ngStyle]="getStyleText()" class="font-style" id="input-text">{{ getText(sign) }}</span>
+  <span [ngStyle]="getStyleText(sign)" class="font-style" id="input-text">{{ getText(sign) }}</span>
 </div>
 
 <!-- <div>
