Nhập nhiều số hợp đồng cùng 1 giá trị

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'" style="background-color: white;">
+<div class="text-sign" *ngIf="sign.sign_unit == 'text'">
   <div class="skeleton-sign" (click)="doEditText()" *ngIf="!checkShowEdit">
     <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
   </div>
@@ -26,4 +26,23 @@
     <input type="text" class="input-edit-text" [(ngModel)]="sign.valueSign" (blur)="doneEditTextSign()" #inputEditText>
   </div>
 </div>
+
+<div class="text-sign" *ngIf="sign.sign_unit == 'so_tai_lieu'">
+  <div class="skeleton-sign" (click)="doEditContractNo()" *ngIf="!contractNoValue && count == 0">
+    <span id="input-text"   [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
+    <!-- <input id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo> -->
+  </div>
+  <div class="skeleton-sign" *ngIf="contractNoValue || count > 0">
+    <input id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo>
+  </div>
+</div> 
+
+<!-- <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
+  <div class="skeleton-sign" (click)="doEditText()" *ngIf="!checkShowEdit">
+    <span id="input-text" [ngbTooltip]="sign.valueSign ? sign.valueSign : ''">{{getText(sign)}}</span>
+  </div>
+  <div class="skeleton-sign" *ngIf="checkShowEdit">
+    <input type="text" class="input-edit-text" [(ngModel)]="sign.valueSign" (blur)="doneEditTextSign()" #inputEditText>
+  </div>
+</div> -->
 
