kéo nhiều số hợp đồng mẫu hợp đồng

--- a/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-sign-contract/image-sign-contract.component.html
@@ -33,7 +33,7 @@
     <!-- <input id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo> -->
   </div>
   <div class="skeleton-sign" *ngIf="contractNoValue || count > 0">
-    <input id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo>
+    <input style="text-align: center;" id="input" type="text" class="input-edit-text" [(ngModel)]="contractNoValueSign" (blur)="doneEditContractNoSign(sign)" #inputEditContractNo>
   </div>
 </div> 
 
