--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -68,7 +68,7 @@
 
         <!-- KD -->
         <div *ngIf="this.site == 'KD'" class="participants--input" style="display: flex" >
-          <div  class="participants__name" style="width: 91%" *ngIf="isCheckRadio">
+          <div  class="participants__name" style="width: 93%" *ngIf="isCheckRadio">
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
@@ -76,7 +76,7 @@
             </div>
           </div>
 
-          <div class="participants__name" style="width: 91%" *ngIf="!isCheckRadio">
+          <div class="participants__name" style="width: 93%" *ngIf="!isCheckRadio">
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img class="input-img">
@@ -86,27 +86,48 @@
         </div>
 
         <!--NB email-->
-        <!-- <div *ngIf="this.site == 'NB'" class="participants--input" style="display: flex">
-          <div class="participants__name">
+        <div *ngIf="this.site == 'NB' && isCheckRadio" class="participants--input" style="display: flex; width: 84%;">
+          <div class="participants__name" >
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
-            < class="input-data">
+            <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" value="{{this.email}}">
             </div>
           </div>
 
-          <div class="participants__name">
+          <div class="participants__name" >
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
             </div>
           </div>
+        </div>
+
+        <!-- <div *ngIf="this.site == 'NB' && !isCheckRadio && id_sign_type != 1" class="participants--input" style="display: flex">
+          <div class="participants__name" style="width:93%">
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+            <span>ssss</span>
+            <div class="input-data">
+              <img src="assets/img/login_email.svg" class="input-img">
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
+            </div>
+          </div>
         </div> -->
+        
+        <div *ngIf="this.site == 'NB' && !isCheckRadio" class="participants--input" style="display: flex">
+          <div class="participants__name" style="width:93%">
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
+            <div class="input-data">
+              <img src="assets/img/login_email.svg" class="input-img">
+              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
+            </div>
+          </div>
+        </div>
 
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là usbtoken-->
         <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 2">
-          <div class="participants__name" style="width: 91%">
+          <div class="participants__name" style="width: 93%">
             <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;<span class="required-title">*</span><div style="color: #ffc107;">({{'info.token' | translate}})</div></div>
             <div class="input-data">
               <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
@@ -116,7 +137,7 @@
 
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là hsm-->
         <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 4">
-          <div class="participants__name" style="width: 91%">
+          <div class="participants__name" style="width: 93%">
             <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
@@ -125,8 +146,8 @@
         </div>
 
          <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là ảnh và otp-->
-        <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 1 && isCheckRadio">
-          <div class="participants__name" style="width: 91%">
+        <div class="participants--input" style="display: flex" *ngIf="this.site == 'KD' && id_sign_type == 1 && isCheckRadio">
+          <div class="participants__name" style="width: 93%">
             <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
@@ -135,8 +156,8 @@
         </div>
 
         <!--trường hiển thị khi đối tác là cá nhân chọn loại ký là eKYC-->
-        <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 5">
-          <div class="participants__name" style="width: 91%">
+        <div class="participants--input" style="display: flex" *ngIf=" id_sign_type == 5">
+          <div class="participants__name" style="width: 93%">
             <div class="label_detail text-color">{{'cardId' | translate}}&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <input type="text" placeholder="{{'enter.cardId' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
