--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -250,7 +250,34 @@
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
+             
+                <!-- <div>
+                  <div class="participants__name" style="width: 20%">
+
+                      <div class="input-data">
+                        <div  class="drop_menu">
+                          <button ngbDropdownItem class="drop" (click)="switchLang('en')">
+                            <div style="display: flex; align-items: center">
+                              <div class="db_user">
+                                <div class="db_icon_english"></div>
+                              </div>
+                              
+                            </div>
+                          </button>
+                          <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
+                            <div style="display: flex; align-items: center">
+                              <div class="db_user">
+                                <div class="db_icon_vietnam"></div>
+                              </div>
+                              
+                            </div>
+                          </button>
+                        </div>
+                      </div>
+                  </div>
+                </div> -->
               </div>
+
 
               <!--NB email-->
               <div *ngIf="this.site == 'NB' && d.login_by === 'email'" class="participants--input" style="display: flex">
