--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.scss
@@ -346,6 +346,12 @@ input[type=number] {
               width: 100%;
             }
           }
+          .header_language {
+            position: absolute;
+            right: 0px;
+            padding: 5px;
+          }
+
 
           input {
             outline: none;
@@ -465,9 +471,7 @@ input[type=number] {
         //margin: 0 29px;
         //margin: 0 44px;
 
-        div:first-child, div:last-child {
-          //width: 42%;
-        }
+
 
         .participants__name:last-child {
           input {
@@ -540,7 +544,27 @@ input[type=number] {
   color: #ffc107;
   font-size: 12px;
 }
-
+.db_icon_english {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../../../../assets/img/icon_english.svg);
+}
+.db_icon_vietnam {
+  height: 20px;
+  width: 30px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../../../../../../assets/img/icon_vietnam.svg);
+}
+.drop_menu{
+  border-color: #C2E4FF;
+  padding: 0;
+  font-size: inherit;
+  right: 10px;
+  left: unset !important;
+}
 //::ng-deep .mat-form-field-flex {
 //  background-color: white;
 //}
