--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
@@ -5,7 +5,7 @@
   <form [formGroup]="myForm" class="content">
       <div class="row">
           <div class="col-md-12">
-              <div class="label text-color">{{'tax_code' | translate}} <span class="required-title">*</span></div>
+              <div class="label text-color">{{'tax_code.cardId' | translate}} <span class="required-title">*</span></div>
               <div class="input-data">
                   <input type="text" formControlName="taxCode" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" autofocus>
               </div>
