--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -160,7 +160,7 @@
                                     <input type="text" formControlName="taxCodeHsm">
                                 </div>
                                 <div *ngIf="submitted && f.taxCodeHsm.errors" class="invalid">
-                                    <div *ngIf="f.taxCodeHsm.errors.pattern">{{'Mã số thuế không đúng định dạng' | translate}}</div>
+                                    <div *ngIf="f.taxCodeHsm.errors.pattern">{{'Mã số thuế/CMT/CCCD không đúng định dạng' | translate}}</div>
                                 </div>
                             </div>
                         </div>
