--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -145,7 +145,7 @@
                                 <input type="text" formControlName="taxCodeHsm">
                             </div>
                             <div *ngIf="submittedSign && fHsm.taxCodeHsm.errors" class="invalid">
-                                <div *ngIf="fHsm.taxCodeHsm.errors.pattern">{{'Mã số thuế không đúng định dạng' | translate}}</div>
+                                <div *ngIf="fHsm.taxCodeHsm.errors.pattern">{{'Mã số thuế/CMT/CCCD không đúng định dạng' | translate}}</div>
                             </div>
                         </div>
                     </div>
