--- a/src/app/main/contract/detail-contract/detail-contract.component.html
+++ b/src/app/main/contract/detail-contract/detail-contract.component.html
@@ -115,7 +115,6 @@
         
         <a style="text-align: center">
           <button class="call-page" (click)="firstPage()">
-            <!-- <img width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg"> -->
             <img  width="16px" height="20px" *ngIf="!this.page1" src="assets/img/firstpage.svg">
             <img  width="16px" height="20px" *ngIf="this.page1" src="assets/img/previousbold.svg">
           </button>
@@ -139,6 +138,10 @@
           <a *ngIf="role || this.status == 30" style="position: absolute; right: 5px;">
             <button  type="button" name="next" class="next action-button" *ngIf="view && loaded && status != 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>
             <button  type="button" name="next" class="next action-button1" *ngIf="view && loaded && status == 4" (click)="downloadContract(idContract)">{{checkStatusUser(status, role) | translate}}</button>      
+          </a>
+
+          <a style="position: absolute; right: 5px;">
+            <button  type="button" name="next" class="next action-button" (click)="endContract()">{{'end' | translate}}</button>
           </a>
       </div>
   </div>
