--- a/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/consider-contract.component.html
@@ -77,7 +77,7 @@
           <p class="d-flex mb-2 text-align-left mx-3">{{'content.confirm' | translate}}</p>
           <div class="confirm-radio d-flex justify-content-between mx-4">
             <div class="radio-confirm">
-              <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature' (ngModelChange)="changePositionSign()">
+              <input id="radio-confirm-secretary" type="radio" name="confirm-radio-secretary" [value]="1" [(ngModel)]='confirmSignature'>
               <label for="radio-confirm-secretary" class="ms-2">{{'btn.accept' | translate}}</label>
             </div>
             <div class="radio-refuse">
@@ -206,10 +206,21 @@
 </div>
 </div>
 
-<app-footer-signature *ngIf="loaded" [pageNum]="pageNum" [pageLast]="pageLast" [page1]="page1" [pageNumber]="pageNumber" [thePDF]="thePDF" [idElement]="idElement" [coordinateY]="coordinateY" 
-[confirmSignature]="confirmSignature" [datas]="datas" [view]="[2,3].includes(recipient.status)" [recipientId]="recipientId" 
-(submitChanges)="submitEvents($event)"
-
+<app-footer-signature *ngIf="loaded" 
+  [pageNum]="pageNum" 
+  [pageLast]="pageLast" 
+  [page1]="page1" 
+  [pageNumber]="pageNumber" 
+  [thePDF]="thePDF" 
+  [idElement]="idElement" 
+  [coordinateY]="coordinateY" 
+  [confirmSignature]="confirmSignature" 
+  [datas]="datas" 
+  [view]="[2,3].includes(recipient.status)" 
+  [recipientId]="recipientId" 
+  [pageBefore]="pageBefore"
+  [status]="status"
+  (submitChanges)="submitEvents($event)"
 ></app-footer-signature>
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
