truyền ceca_push khi tạo hợp đồng

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -417,7 +417,7 @@
         <!-- To chuc ky -->
         <div *ngIf="item.type == 2">
          <div class="participants-border">
-           <!-- <div class="label" style="justify-content: space-between;">
+           <div class="label" style="justify-content: space-between;">
              <div>
              {{'user.lead' | translate}}
             </div>
@@ -427,7 +427,7 @@
                 <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item).length > 0" checked (change)="changeIsCoordination($event, item, id)">
                 <div style="padding: 0 20px 0 5px">Có người điều phối</div>
               </div>
-            </div> -->
+            </div>
          </div>
 
           <!--Người xem xét-->
