Cấu hình loại hợp đồng theo tổ chức

--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <!--Đẩy file hợp đồng lên BCT-->
-    <div class="row">
+    <div *ngIf="this.ceca" class="row">
       <div class="col-md-12">
         <div class="form-group">
           <div class="label_item">{{'contract-type.ceca' | translate}}</div>
