fix bug có người điều phối thì không cần có người ký

--- a/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer/determine-signer.component.html
@@ -426,6 +426,14 @@
                 <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item).length == 0" (change)="changeIsCoordination($event, item, id)">
                 <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item).length > 0" checked (change)="changeIsCoordination($event, item, id)">
                 <div style="padding: 0 20px 0 5px">Có người điều phối</div>
+
+
+                <!-- <div *ngIf="getPartnerCoordination(item).length > 0 " style="display: flex">
+                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp != 1" (change)="changeIsSmsCoordination($event, item, 0)">
+                  <input type="checkbox" style="width: 17px; height: 17px;" *ngIf="getPartnerCoordination(item)[0].is_otp == 1" checked (change)="changeIsSmsCoordination($event, item, 0)">
+                  <div style="padding: 0 20px 0 5px">Nhận SMS thông báo khi xử lý hợp đồng</div>
+                </div> -->
+
               </div>
             </div>
          </div>
