--- a/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
+++ b/src/app/main/contract-type/add-contract-type/add-contract-type.component.html
@@ -12,7 +12,7 @@
                         panelStyleClass="font" 
                         optionLabel="name"
                         optionValue="id" 
-                        placeholder="{{'choose.contract.type' | translate}}" 
+                        placeholder="{{'choose' | translate}}" 
                         [showClear]="true"
                         [options]="optionsCeCa" 
                         [(ngModel)]="optionsCeCaValue"
