Đẩy file hợp đồng lên Bộ Công thương không được để trống

--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -50,9 +50,9 @@
     </div>
 
     <div *ngIf="this.ceca" class="form-group">
-      <div class="label_item">{{'contract-type.ceca' | translate}}</div>
+      <div class="label_item">{{'contract-type.ceca' | translate}}<span class="require_star">*</span></div>
         <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
-          optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true">
+          optionValue="id" placeholder="{{'choose' | translate}}" [showClear]="true">
         </p-dropdown>
     </div>
   </div>
