Xử lý Sms song ngữ và fix bug chỉnh sửa ng trong luồng xử lý

--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.scss
@@ -551,8 +551,11 @@
     outline: none;
     color: white;
     border: 1px solid #8B8B8B;
+    margin: 0 10px 0;
   }
   .footer-btn{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    text-align: center; 
+    margin: 15px;
   }
