--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -59,7 +59,7 @@
             <div class="label_detail text-color">{{'user.sign-type' | translate}}&nbsp;<span class="required-title">*</span></div>
             
               <div class="input-data">
-                <input type="text" placeholder="{{'nhap_email' | translate}}" value="{{sign_type}}" readonly>
+                <input type="text"  value="{{sign_type}}" readonly style="background-color: #EFF2F5;">
               </div>
               
             </div>
@@ -72,7 +72,7 @@
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email"/>
+              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" (keydown)="keyDownHandler($event)"/>
             </div>
           </div>
 
@@ -91,29 +91,20 @@
             <div class="label_detail text-color">Email&nbsp;<span class="required-title">*</span></div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" value="{{this.email}}">
+              <input type="text" placeholder="{{'nhap_email' | translate}}" [(ngModel)]="email" value="{{this.email}}" (keydown)="keyDownHandler($event)">
             </div>
           </div>
 
           <div class="participants__name" >
-            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div></div>
+            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;
+              <div style="color: #ffc107;">({{'receive.contract.process' | translate}})</div>
+            </div>
             <div class="input-data">
               <img src="assets/img/login_email.svg" class="input-img">
               <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone" value="{{this.phone}}">
             </div>
           </div>
         </div>
-
-        <!-- <div *ngIf="this.site == 'NB' && !isCheckRadio && id_sign_type != 1" class="participants--input" style="display: flex">
-          <div class="participants__name" style="width:93%">
-            <div class="label_detail text-color">{{'user.phone' | translate}}&nbsp;<span class="required-title">*</span></div>
-            <span>ssss</span>
-            <div class="input-data">
-              <img src="assets/img/login_email.svg" class="input-img">
-              <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="phone">
-            </div>
-          </div>
-        </div> -->
         
         <div *ngIf="this.site == 'NB' && !isCheckRadio" class="participants--input" style="display: flex">
           <div class="participants__name" style="width:93%">
@@ -138,7 +129,10 @@
         <!--trường hiển thị khi người ký tổ chức của tôi chọn loại ký là hsm-->
         <div class="participants--input" style="display: flex" *ngIf="id_sign_type == 4">
           <div class="participants__name" style="width: 93%">
-            <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
+            <div class="label_detail text-color">{{'tax_code.cardId' | translate}}&nbsp;
+              <span class="required-title">*</span>
+              <div style="color: #ffc107;">({{'info.hsm' | translate}})</div>
+            </div>
             <div class="input-data">
               <input type="text" placeholder="{{'enter.tax.code' | translate}}" [(ngModel)]="card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             </div>
@@ -165,9 +159,9 @@
           </div>
         </div>
     </div>
-    <div class="footer-btn" style="text-align: center; margin-top: 20px;">
-        <button (click)="UpdateHandler()">{{"btn.update" | translate}}</button>
-        <button (click)="handleCancel()">{{"exit" | translate}}</button>
+    <div class="footer-btn">
+      <button (click)="handleCancel()">{{"exit" | translate}}</button>
+      <button (click)="UpdateHandler()">{{"btn.update" | translate}}</button>
     </div>
 
   </div>
