--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -46,11 +46,11 @@
                 <div class="col-md-2" style="text-align: center;display: flex;justify-content: center"
                 *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate ">
                     
-                        <div *ngIf = "d.statusNumber != 0 && d.statusNumber !== 4">
+                        <div *ngIf = "d.statusNumber !== 0 && d.statusNumber !== 4">
                             <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
                         </div>
 
-                        <div *ngIf = "d.statusNumber != 0 && d.statusNumber !== 4" class="div_icon">
+                        <div *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4" class="div_icon">
                              <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/>
                         </div>
                     
@@ -92,10 +92,10 @@
 
                 <div class="col-md-2" style="text-align: center; display: flex;justify-content: center"
                 *ngIf = " isHiddenButton && listCheckSmsEmail && isEndDate "> 
-                    <div *ngIf = "d.statusNumber != 0 && d.statusNumber !== 4">
+                    <div *ngIf = "d.statusNumber !== 0 && d.statusNumber !== 4">
                         <img src="../../assets/img/icon_sms_email2.svg" class="button_icon" ngbTooltip="{{'resend.sms.email' | translate}}" (click)="resendSmsEmail(d.id)"/>
                     </div>
-                    <div class="div_icon" *ngIf = "d.statusNumber != 0 && d.statusNumber !== 4">
+                    <div class="div_icon" *ngIf = "d.statusNumber !== 2 && d.statusNumber !== 4">
                         <img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'update.person-process' | translate}}" (click)="openEdit(d.id)"/>
                     </div>
                 </div>
