--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -250,32 +250,6 @@
                     <input type="text" placeholder="{{'nhap_sdt' | translate}}" [(ngModel)]="d.email">
                   </div>
                 </div>
-             
-                <!-- <div>
-                  <div class="participants__name" style="width: 20%">
-
-                      <div class="input-data">
-                        <div  class="drop_menu">
-                          <button ngbDropdownItem class="drop" (click)="switchLang('en')">
-                            <div style="display: flex; align-items: center">
-                              <div class="db_user">
-                                <div class="db_icon_english"></div>
-                              </div>
-                              
-                            </div>
-                          </button>
-                          <button ngbDropdownItem class="drop" (click)="switchLang('vi')">
-                            <div style="display: flex; align-items: center">
-                              <div class="db_user">
-                                <div class="db_icon_vietnam"></div>
-                              </div>
-                              
-                            </div>
-                          </button>
-                        </div>
-                      </div>
-                  </div>
-                </div> -->
               </div>
 
 
@@ -447,7 +421,7 @@
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">{{'tax_code' | translate}}&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="text" placeholder="{{'enter.tax_code' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                    <input type="text" placeholder="{{'enter.tax_code.cardId' | translate}}" [(ngModel)]="d.card_id" oninput="this.value = this.value.replace(/[\s]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
                   </div>
                 </div>
               </div>
