Lỗi hiển thị user xử lý cho số hợp đồng mới được kéo vào

--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -147,7 +147,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract-type.ceca' | translate}}<span class="require_star">*</span></div>
           <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
-            optionValue="id" placeholder="{{'choose' | translate}}" [showClear]="true">
+            optionValue="id" [showClear]="true">
           </p-dropdown>
       </div>
       <div class="form-group">
